# cairo-lint

./: .gitignore  .tool-versions  CONTRIBUTING.md  Cargo.toml  MAINTAINING.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: ci.yml  nightly.yml  on-scarb-new-tag.yml  website-deploy.yml
crates/cairo-lint-cli/: Cargo.toml
crates/cairo-lint-cli/src/: main.rs
crates/cairo-lint-core/: Cargo.toml
crates/cairo-lint-core/src/: context.rs  fixes.rs  helper.rs  lib.rs  plugin.rs  queries.rs
crates/cairo-lint-core/src/fixes/: break_unit.rs  desctruct_match.rs  double_comparison.rs  double_parens.rs  helper.rs  import_fixes.rs  mod.rs
crates/cairo-lint-core/src/lints/: bitwise_for_parity_check.rs  bool_comparison.rs  breaks.rs  double_comparison.rs  double_parens.rs  duplicate_underscore_args.rs  enum_variant_names.rs  eq_op.rs  erasing_op.rs  int_op_one.rs  mod.rs  panic.rs  performance.rs  redundant_op.rs  single_match.rs
crates/cairo-lint-core/tests/: tests.rs
crates/cairo-lint-core/tests/bitwise_for_parity_check/: .mod.rs.pending-snap
crates/cairo-lint-core/tests/bool_comparison/: .mod.rs.pending-snap
crates/cairo-lint-core/tests/breaks/: .mod.rs.pending-snap  mod.rs
crates/cairo-lint-core/tests/double_comparison/: .mod.rs.pending-snap
crates/cairo-lint-core/tests/double_parens/: .mod.rs.pending-snap
crates/cairo-lint-core/tests/enum_variant_names/: mod.rs
crates/cairo-lint-dev/: Cargo.toml
crates/cairo-lint-dev/src/: main.rs  update_docs.rs
crates/cairo-lint-test-utils/: Cargo.toml
crates/cairo-lint-test-utils/src/: lib.rs
src/: context.rs  corelib.rs  db.rs  diagnostics.rs  fixes.rs  helper.rs  lib.rs  mappings.rs  plugin.rs  queries.rs  types.rs  upstream.rs
src/fixer/: db.rs  mod.rs
src/lang/: db.rs  mod.rs
src/lints/: assert_on_const.rs  bitwise_for_parity_check.rs  bool_comparison.rs  breaks.rs  clone_on_copy.rs  collapsible_match.rs  double_comparison.rs  double_parens.rs  duplicate_underscore_args.rs  empty_enum_brackets_variant.rs  enum_variant_names.rs  eq_op.rs  erasing_op.rs  int_op_one.rs  mod.rs  panic.rs  performance.rs  redundant_brackets_in_enum_call.rs  redundant_into.rs  redundant_op.rs  single_match.rs  unit_return_type.rs  unwrap_syscall.rs
src/lints/ifs/: collapsible_if.rs  collapsible_if_else.rs  equatable_if_let.rs  ifs_same_cond.rs
src/lints/loops/: loop_for_while.rs  loop_match_pop_front.rs
src/lints/manual/: helpers.rs  manual_assert.rs  manual_err.rs  manual_expect.rs  manual_expect_err.rs  manual_is.rs  manual_is_empty.rs  manual_ok.rs  manual_ok_or.rs  manual_unwrap_or.rs  manual_unwrap_or_default.rs  manual_unwrap_or_else.rs  mod.rs
src/lints/performance/: inefficient_unwrap_or.rs  inefficient_while_comp.rs  mod.rs
tests/: main.rs
tests/assert_on_const/: mod.rs
tests/bitwise_for_parity_check/: .mod.rs.pending-snap
tests/bool_comparison/: .mod.rs.pending-snap
tests/breaks/: .mod.rs.pending-snap  mod.rs
tests/clone_on_copy/: .mod.rs.pending-snap  mod.rs
tests/collapsible_match/: mod.rs
tests/double_comparison/: .mod.rs.pending-snap  mod.rs
tests/double_parens/: .mod.rs.pending-snap  mod.rs
tests/duplicate_underscore_args/: .mod.rs.pending-snap
tests/empty_enum_brackets_variant/: mod.rs
tests/enum_variant_names/: .mod.rs.pending-snap  mod.rs
tests/eq_op/: .mod.rs.pending-snap  mod.rs
tests/erasing_operations/: .mod.rs.pending-snap
tests/fix_messages/: mod.rs
tests/helpers/: mod.rs  setup.rs
tests/ifs/: .collapsible_if.rs.pending-snap  .collapsible_if_else.rs.pending-snap  .equatable_if_let.rs.pending-snap  .ifs_same_cond.rs.pending-snap  collapsible_if.rs  collapsible_if_else.rs  equatable_if_let.rs  ifs_same_cond.rs
tests/int_operations/: .mod.rs.pending-snap
tests/loops/: .loop_for_while.rs.pending-snap  .loops_match_pop_front.rs.pending-snap  loop_for_while.rs  loops_match_pop_front.rs
tests/manual/: .manual_err.rs.pending-snap  .manual_expect.rs.pending-snap  .manual_expect_err.rs.pending-snap  .manual_is_err.rs.pending-snap  .manual_is_none.rs.pending-snap  .manual_is_ok.rs.pending-snap  .manual_is_some.rs.pending-snap  .manual_ok.rs.pending-snap  .manual_ok_or.rs.pending-snap  .manual_unwrap_or_default.rs.pending-snap  manual_assert.rs  manual_err.rs  manual_expect.rs  manual_expect_err.rs  manual_is_empty.rs  manual_is_err.rs  manual_is_none.rs  manual_is_ok.rs  manual_is_some.rs  manual_ok.rs  manual_ok_or.rs  manual_unwrap_or.rs  manual_unwrap_or_default.rs  manual_unwrap_or_else.rs  mod.rs
tests/nested_fixes/: mod.rs
tests/panic/: .mod.rs.pending-snap  mod.rs
tests/performance/: .mod.rs.pending-snap  inefficient_unwrap_or.rs  inefficient_while_comp.rs  mod.rs
tests/playground/: mod.rs
tests/redundant_brackets_in_enum_call/: mod.rs
tests/redundant_into/: mod.rs
tests/redundant_op/: .mod.rs.pending-snap
tests/single_match/: .mod.rs.pending-snap  mod.rs
tests/unit_return_type/: mod.rs
tests/unused_imports/: mod.rs
tests/unused_variables/: mod.rs
tests/unwrap_syscall/: mod.rs
website/: docs.md  lints_metadata.json  package-lock.json  package.json
website/.vitepress/: config.mjs
website/.vitepress/components/: Footer.vue  Home.vue
website/docs/: default_profile.md
website/docs/lints/: bitwise_for_parity_check.md  bool_comparison.md  break_unit.md  clone_on_copy.md  collapsible_if.md  collapsible_if_else.md  contradictory_comparison.md  destruct_match.md  div_eq_op.md  double_parens.md  duplicate_underscore_args.md  empty_enum_brackets_variant.md  enum_variant_names.md  eq_bitwise_op.md  eq_comp_op.md  eq_diff_op.md  eq_logical_op.md  equality_match.md  equatable_if_let.md  erasing_op.md  ifs_same_cond.md  impossible_comparison.md  inefficient_while_comp.md  int_ge_min_one.md  int_ge_plus_one.md  int_le_min_one.md  int_le_plus_one.md  loop_for_while.md  loop_match_pop_front.md  manual_assert.md  manual_err.md  manual_expect.md  manual_expect_err.md  manual_is_err.md  manual_is_none.md  manual_is_ok.md  manual_is_some.md  manual_ok.md  manual_ok_or.md  manual_unwrap_or.md  (+9 more)
xtask/: Cargo.toml
xtask/src/: update_docs.rs
(+79 files in other folders)
