[package]
name = "cairo-lint"
description = "Core library for linting Cairo language code."
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true


[workspace]
resolver = "2"
members = ["xtask"]

[workspace.package]
version = "2.15.0-rc.0"
edition = "2024"
repository = "https://github.com/software-mansion/cairo-lint"
license-file = "LICENSE"

# Managing dependencies on crates from starkware-libs/cairo repository:
#
# The Cairo compiler is made of a bunch of crates that inter-depend on each other and have
# synchronised versioning.
# It is very important to use a single revision of these crates in the entire Cairo toolchain,
# which consists of Cairo compiler, Scarb, CairoLS and other tools.
# The toolchain is eventually built by Scarb, which depends on everything other as regular crates.
# To ensure that all crates in the toolchain use the same revision of Cairo crates, we use a patch
# mechanism that Cargo provides.
# Because Cargo requires patches to change the crate source, we have an unspoken contract that
# all tools *always* depend on some crates.io versions of Cairo crates and Scarb uses
# [patch.crates.io] table to set final git revision for everything.
#
# To keep our Cargo.toml following this contract, always use `cargo xtask upgrade`
# for manipulating these dependencies.
[dependencies]
anyhow = "1.0.100"
cairo-lang-compiler = "2.15.0-rc.0"
cairo-lang-defs = "2.15.0-rc.0"
cairo-lang-diagnostics = "2.15.0-rc.0"
cairo-lang-filesystem = "2.15.0-rc.0"
cairo-lang-formatter = "2.15.0-rc.0"
cairo-lang-parser = "2.15.0-rc.0"
cairo-lang-semantic = "2.15.0-rc.0"
cairo-lang-syntax = "2.15.0-rc.0"
cairo-lang-test-plugin = "2.15.0-rc.0"
cairo-lang-utils = "2.15.0-rc.0"
cairo-language-common = "2.15.0-rc.0"
if_chain = "1.0.3"
indoc = "2"
itertools = "0.14.0"
log = "0.4.28"
num-bigint = "0.4.6"
salsa = "0.24.0"
scarb-metadata = "1.15.1"
tempfile = "3"
tracing = "0.1"
which = "8"

[dev-dependencies]
ctor = "0.6.1"
insta = "1.44.3"
pretty_assertions = "1.4.1"
test-case = "3.0"

# Here we specify real dependency specifications for Cairo crates *if* currently we want to use
# a particular unreleased commit (which is frequent mid-development).
# We list all Cairo crates that go into Scarb's compilation unit even if Scarb itself does not depend
# on some of them directly.
# This ensures no duplicate instances of Cairo crates are pulled in by mistake.
[patch.crates-io]

[profile.ci]
inherits = "test"
strip = "debuginfo"
[profile.ci.package."salsa"]
opt-level = 3

