[package]
name = "cairo-lint"
description = "Core library for linting Cairo language code."
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true


[workspace]
resolver = "2"
members = ["xtask"]

[workspace.package]
version = "2.15.0"
edition = "2024"
repository = "https://github.com/software-mansion/cairo-lint"
license-file = "LICENSE"

# Managing dependencies on crates from starkware-libs/cairo repository:
#
# The Cairo compiler is made of a bunch of crates that inter-depend on each other and have
# synchronised versioning.
# It is very important to use a single revision of these crates in the entire Cairo toolchain,
# which consists of Cairo compiler, Scarb, CairoLS and other tools.
# The toolchain is eventually built by Scarb, which depends on everything other as regular crates.
# To ensure that all crates in the toolchain use the same revision of Cairo crates, we use a patch
# mechanism that Cargo provides.
# Because Cargo requires patches to change the crate source, we have an unspoken contract that
# all tools *always* depend on some crates.io versions of Cairo crates and Scarb uses
# [patch.crates.io] table to set final git revision for everything.
#
# To keep our Cargo.toml following this contract, always use `cargo xtask upgrade`
# for manipulating these dependencies.
[dependencies]
anyhow = "1.0.100"
cairo-lang-compiler = "*"
cairo-lang-defs = "*"
cairo-lang-diagnostics = "*"
cairo-lang-filesystem = "*"
cairo-lang-formatter = "*"
cairo-lang-lowering = "*"
cairo-lang-parser = "*"
cairo-lang-semantic = "*"
cairo-lang-syntax = "*"
cairo-lang-test-plugin = "*"
cairo-lang-utils = "*"
cairo-language-common = "*"
if_chain = "1.0.3"
indoc = "2"
itertools = "0.14.0"
log = "0.4.29"
num-bigint = "0.4.6"
salsa = "0.25.2"
scarb-metadata = "1.15.1"
tempfile = "3"
tracing = "0.1"
which = "8"

[dev-dependencies]
ctor = "0.6.3"
insta = "1.46.2"
pretty_assertions = "1.4.1"
test-case = "3.0"

# Here we specify real dependency specifications for Cairo crates *if* currently we want to use
# a particular unreleased commit (which is frequent mid-development).
# We list all Cairo crates that go into Scarb's compilation unit even if Scarb itself does not depend
# on some of them directly.
# This ensures no duplicate instances of Cairo crates are pulled in by mistake.
[patch.crates-io]
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-language-common = { git = "https://github.com/software-mansion/cairo-language-common" , rev = "4aaa8282ade8111fca0cdd4e1aefca70aba8900d" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-eq-solver = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-proc-macros = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-runnable-utils = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-sierra-type-size = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-starknet-classes = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-test-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "de768f33024c3092fd31187c86030ba245535668" }

[profile.ci]
inherits = "test"
strip = "debuginfo"
[profile.ci.package."salsa"]
opt-level = 3
