[package]
name = "cairo-lint-dev"
description = "Cairo Lint Development tools"
version = "0.0.1"
edition = "2021"

[dependencies]
cairo-lint-core = { path = "../cairo-lint-core" }
clap.workspace = true
scarb-ui = "0.1.5"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
if_chain.workspace = true
